objects/Ideas__c.object
<CustomObject>
    <description>This object allows the ability to suggest Salesforce enhancements in a central location.</description>
    <fields>
        <fullName>As_a__c</fullName>
        <description>Describe position or job</description>
        <inlineHelpText>This field captures the User that would benefit from the change. E.g. As an [AE/SAE]</inlineHelpText>
        <label>As a...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>This is an open field that allows the User to enter in details of their request. e.g., When a case reaches Closed status, send a notification to Case Creator.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enhanc__c</fullName>
        <label>Enhancement Request</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>I_want_to__c</fullName>
        <description>Describe desired functionality</description>
        <inlineHelpText>This field captures the key capability/feature that is being requested. e.g., I want to [receive a notification when my case is resolved]</inlineHelpText>
        <label>I want to...</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jira_Reference_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Jira Reference ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <inlineHelpText>This field is reserved for the Salesforce Administrators reviewing the Ideas. When they select Rejected in the Status field, they are prompted to provide a Rejection Reason.</inlineHelpText>
        <label>Rejection Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>This field indicates the status of the Idea record.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>Short Summary of Idea</description>
        <inlineHelpText>This field summarizes the change requested.</inlineHelpText>
        <label>Summary</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <inlineHelpText>This field is an automatically assigned number that uniquely identifies the Idea entry.</inlineHelpText>
        <label>Unique ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Vote_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total amount of points voted .</description>
        <inlineHelpText>This field tallies the number of votes supporting the Idea.</inlineHelpText>
        <label>Vote Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>so_that__c</fullName>
        <description>Describe the benefits of this functionality</description>
        <inlineHelpText>This field captures the key value or benefit of the requested change, e.g., so that [I can proceed to the next step of the process].</inlineHelpText>
        <label>so that...</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Idea</label>
    <listViews>
        <fullName>All_Ideas</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Vote_Points__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Ideas</label>
    </listViews>
    <nameField>
        <label>Ideas Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ideas</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Rejected_Status</fullName>
        <active>true</active>
        <description>If Idea is rejected, make sure Rejected Reason is populated</description>
        <errorConditionFormula>TEXT(Status__c) = &apos;Rejected&apos;  &amp;&amp;  Rejection_Reason__c = &apos;&apos;</errorConditionFormula>
        <errorMessage>Enter Rejected Reason</errorMessage>
    </validationRules>
</CustomObject>